--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -1,8 +1,8 @@
-<div class="p-0 container-fluid header"></div>
+<div class="p-0 container-fluid header" style="background-image: url('../../{{profileDetail.headerImgUrl}}');"></div>
 <div class="container mt-5">
     <div class="d-grid justify-content-md-center">
         <div class="round profile-picture ms-4 bg-white shadow">
-            <img class="p-2 round profile-picture" src="assets/profilepic.jpg" alt="">
+            <img class="p-2 round profile-picture" src="{{profileDetail.profileImgUrl}}" alt="">
         </div>
         <div class="shadow rounded px-4 pt-5 pb-2 about">
             <div class="row">
@@ -20,31 +20,31 @@
             <div class="row justify-content-start">
                 <div class="m-2 mt-0 pt-0 col-auto">
                     <fa-icon class="pe-2" [icon]="faLink"></fa-icon>
-                    {{profileDetail.email}} 
+                    <a href="https://{{profileDetail.website}}" class="text-decoration-none"> {{profileDetail.website}}</a>
                 </div>
                 <div class="m-2 mt-0 pt-0 col-auto">
                     <fa-icon class="pe-2" [icon]="faLocationArrow"></fa-icon>
-                    {{profileDetail.location}}
+                    {{profileDetail.siteLocation}}
                 </div>
                 <div class="m-2 mt-0 pt-0 col-auto">
                     <fa-icon class="pe-2" [icon]="faCalendar"></fa-icon>
-                    Csatlakozott: 2021 nov.
+                    {{profileDetail.registeredAt | date}}
                 </div>
             </div>
             <div class="row">
                 <div class="col-5 col-md-3 col-lg-2">
-                    <h5 class="fw-bold m-2">54 <small class="fw-normal">követő</small></h5>
+                    <h5 class="fw-bold m-2">{{profileDetail.followers}} <small class="fw-normal">követő</small></h5>
                 </div>
                 <div class="col-5 col-md-3 col-lg-2">
-                    <h5 class="fw-bold m-2">16 <small class="fw-normal">követ</small></h5>
+                    <h5 class="fw-bold m-2">{{profileDetail.follows}} <small class="fw-normal">követ</small></h5>
                 </div>
             </div>
             <div class="row">
                 <p class="mt-3">
-                   {{profileDetail.description}}
+                   {{profileDetail.about}}
                 </p>
             </div>
-            <div class="row">
+            <div *ngIf="profileDetail.takesCustomOrders" class="row">
                 <hr>
                 <p>Egyedi rendeléseket is vállal.
                     <a href="#" class="text-decoration-none">Tudj meg többet.</a>
