--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -1,65 +1,123 @@
 <div class="container shadow rounded p-3">
-    <h3>Új termék felvétele</h3>
+    <h2 class="text-center">Új termék felvétele</h2>
     <div class="row">
-        <div class="col-12 col-md-8">
+        <div class="col-12 col-md-7 p-3 ps-3">
             <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
                 <div class="mb-3">
                     <label for="name" class="form-label mb-1">Termék megnevezése</label>
-                    <input type="text" class="form-control" formControlName="name" id="name" [(ngModel)]="model.name">
+                    <input type="text" class="form-control" formControlName="name" id="name"
+                        [(ngModel)]="newProduct.name">
                 </div>
                 <div class="mb-3">
                     <label for="price" class="form-label mb-1">Ár <small>(HUF)</small></label>
-                    <input type="number" class="form-control" formControlName="price" id="price" [(ngModel)]="model.price">
+                    <input type="number" class="form-control" formControlName="price" id="price"
+                        [(ngModel)]="newProduct.price">
                 </div>
                 <div class="mb-3">
                     <label for="discount" class="form-label mb-1">Kedvezmény</label>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
-                          Kedvezmény elérhető
+                        <input class="form-check-input" type="checkbox" value="" formControlName="discountAvailable"
+                            [(ngModel)]="newProduct.discountAvailable" id="discountAvailable">
+                        <label class="form-check-label" for="discountAvailable">
+                            Kedvezmény elérhető
                         </label>
-                      </div>
-                    <input type="number" class="form-control" formControlName="discount" id="discount">
+                    </div>
+                    <input type="number" class="form-control" formControlName="discount" id="discount" [attr.disabled]="newProduct.discountAvailable ? null : true">
                 </div>
                 <div class="mb-3">
                     <label for="inventory" class="form-label mb-1">Raktáron <small>(db)</small></label>
-                    <input type="number" class="form-control" formControlName="inventory" id="inventory">
+                    <input type="number" class="form-control" formControlName="inventory" id="inventory"
+                        [(ngModel)]="newProduct.inventory">
                 </div>
                 <div class="mb-3">
                     <label for="delivery" class="form-label mb-1">Kiszállítás</label>
                     <div class="form-check">
-                        <input type="radio" class="form-check-input" name="delivery" id="available" value="available">
+                        <input type="radio" class="form-check-input" name="delivery" id="available" value="Azonnal szállítható">
                         <label class="form-check-label" for="available">Azonnal szállítható</label>
-                      </div>
-                      <div class="form-check">
-                        <input type="radio" class="form-check-input" name="delivery" id="order" value="made-on-demand">
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" class="form-check-input" name="delivery" id="order" value="Megrendelésre készül">
                         <label class="form-check-label" for="order">Megrendelésre készül</label>
-                      </div>
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="category" class="form-label mb-1">Kategória</label>
-                    <input type="text" class="form-control" formControlName="category" id="category">
+                    <input type="text" class="form-control" formControlName="category" id="category" [(ngModel)]="newProduct.category">
                 </div>
                 <div class="mb-3">
-                    <label for="tag" class="form-label mb-1">Cimkék</label>
-                    <input type="text" class="form-control" formControlName="tag" id="tag">
+                    <div formArrayName="tags">
+                        <label class="mb-2">Címkék</label> <br>
+                        <div *ngFor="let tag of tags.controls; let i=index">
+                            <!-- <label for="alias-{{ i }}">Címke:</label> -->
+                            <input id="tag-{{ i }}" type="text" class="form-control mb-2" [formControlName]="i"
+                                [(ngModel)]="newProduct.tags[i]">
+                        </div>
+                        <button (click)="addTag()" type="button" class="btn btn-primary">+ Címke hozzáadása</button>
+                    </div>
                 </div>
                 <div class="mb-3">
-                    <label for="materials" class="form-label mb-1">Alapanyagok</label>
-                    <input type="text" class="form-control" formControlName="materials" id="materials">
+                    <div formArrayName="materials">
+                        <label class="mb-2">Alapanyagok</label> <br>
+                        <div *ngFor="let material of materials.controls; let i=index">
+                            <input id="material-{{ i }}" type="text" class="form-control mb-2" [formControlName]="i"
+                                [(ngModel)]="newProduct.materials[i]">
+                        </div>
+                        <button (click)="addMaterial()" type="button" class="btn btn-primary">+ Alapanyag hozzáadása</button>
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="picture" class="form-label mb-1">Kép</label>
                     <input type="file" class="form-control" id="picture">
                 </div>
                 <div class="mb-3">
-                    <button type="submit" class="btn btn-secondary">Mentés</button>
-                    <button type="submit" class="btn btn-primary" [disabled]="!productForm.valid">Közzététel</button>
+                    <button type="submit" class="btn btn-secondary p-2 m-2">Mentés</button>
+                    <button type="submit" class="btn btn-primary p-2 m-2" [disabled]="!productForm.valid">Közzététel</button>
                 </div>
             </form>
         </div>
-        <div class="col-12 col-md-4">
-            <product-card [name]="model.name" [seller]=model.seller [imgUrl]=model.imgUrl [price]=model.price ></product-card>
+        <div class="col-12 col-md-5 p-3 border-start">
+            <h4 class="text-center">Előnézet</h4>
+            <div class="d-flex justify-content-center">
+                <product-card [name]="newProduct.name" [seller]=newProduct.seller [imgUrl]=newProduct.imgUrl [price]=newProduct.price></product-card>
+            </div>
+            <div *ngIf="newProduct.tags" class="d-flex justify-content-center">
+                <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
+                    <div class="row mx-auto">
+                        <div *ngFor="let tag of newProduct.tags">
+                            <div class="col-2 text-center">
+                                icon
+                            </div>
+                            <div class="ps-0 col-10">
+                                <p>{{tag}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div *ngIf="newProduct.tags" class="d-flex justify-content-center">
+                <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
+                    <div class="row mx-auto">
+                        <div class="col-2 text-center">
+                            <!-- <fa-icon [icon]="faGem"></fa-icon> -->
+                        </div>
+                        <div class="ps-0 col-10">
+                            <p>Kategória: {{newProduct.category}}</p>
+                        </div>
+                        <div class="col-2 text-center">
+                            <fa-icon [icon]="faBoxes"></fa-icon>
+                        </div>
+                        <div class="ps-0 col-10">
+                            <p>Anyaga: {{getMaterials()}}</p>
+                        </div>
+                        <div class="col-2 text-center">
+                            <fa-icon [icon]="faTruck"></fa-icon>
+                        </div>
+                        <div class="ps-0 col-10">
+                            <p>{{newProduct.delivery}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
