--- a/agora-angular/src/app/product-list/product-card/product-card.component.html
+++ b/agora-angular/src/app/product-list/product-card/product-card.component.html
@@ -1,6 +1,9 @@
 <div class="card card-product m-3 shadow">
     <div class="img-placeholder ">
-        <img src="{{imgUrl}}" class="card-img-top img-product" alt="...">
+        <img *ngIf="imgUrl != ''" src="{{imgUrl}}" class="card-img-top img-product" alt="...">
+        <svg *ngIf="imgUrl == ''" class="card-img-top img-placeholder">
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+        </svg>
     </div>
     <div class="card-body card-body-product text-center">
         <h5 class="card-title fw-bold" [class.fit-text]="name.length> 20">{{name}}</h5>
