--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -12,7 +12,7 @@
                     <input type="number" class="form-control" formControlName="price" id="price" (keyup)="inputChange()" step="1" min="0">
                 </div>
                 <div class="mb-3">
-                    <label for="discount" class="form-label mb-1">Kedvezmény</label>
+                    <label for="discount" class="form-label mb-1">Kedvezmény <small>(%)</small></label>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox"
                             (change)="discountAvailable = !discountAvailable" id="discountAvailable">
@@ -23,24 +23,26 @@
                     <input type="number" class="form-control" formControlName="discount" id="discount" [attr.disabled]="discountAvailable ? null : true" (change)="inputChange" step="1" max="99" min="0">
                 </div>
                 <div class="mb-3">
-                    <label for="inventory" class="form-label mb-1">Raktáron <small>(db)</small></label>
-                    <input type="number" class="form-control" formControlName="inventory" id="inventory"
-                        >
-                </div>
-                <div class="mb-3">
                     <label for="delivery" class="form-label mb-1">Kiszállítás</label>
                     <div class="form-check">
-                        <input type="radio" class="form-check-input" name="delivery" id="available" value="Azonnal szállítható">
+                        <input type="radio" class="form-check-input" name="delivery" id="available" value="Azonnal szállítható" formControlName="delivery">
                         <label class="form-check-label" for="available">Azonnal szállítható</label>
                     </div>
                     <div class="form-check">
-                        <input type="radio" class="form-check-input" name="delivery" id="order" value="Megrendelésre készül">
+                        <input type="radio" class="form-check-input" name="delivery" id="order" value="Megrendelésre készül" formControlName="delivery">
                         <label class="form-check-label" for="order">Megrendelésre készül</label>
                     </div>
                 </div>
                 <div class="mb-3">
+                    <label for="inventory" class="form-label mb-1">Raktáron <small>(db)</small></label>
+                    <input type="number" class="form-control" formControlName="inventory" id="inventory" [attr.disabled]="productForm.value.delivery == 'Azonnal szállítható' ? null : true">
+                </div>
+                <div class="mb-3">
                     <label for="category" class="form-label mb-1">Kategória</label>
-                    <input type="text" class="form-control" formControlName="category" id="category" >
+                    <!-- <input type="text" class="form-control" formControlName="category" id="category" > -->
+                    <select class="form-select" aria-label="Default select example" formControlName="category" id="category" name="category">
+                        <option *ngFor="let option of categories" [value]="option">{{option}}</option>
+                    </select>
                 </div>
                 <div class="mb-3">
                     <div formArrayName="tags">
@@ -86,7 +88,7 @@
             <div class="d-flex justify-content-center">
                 <product-card [product]="newProduct"></product-card>
             </div>
-            <div *ngIf="productForm.value.tags" class="d-flex justify-content-center">
+            <div *ngIf="productForm.value.tags[0]" class="d-flex justify-content-center">
                 <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
                     <div *ngFor="let tag of productForm.value.tags" class="row mx-auto">
                         <div class="col-2 text-center">
@@ -100,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div *ngIf="productForm.value.tags" class="d-flex justify-content-center">
+            <div *ngIf="productForm.value.category != '' || productForm.value.materials != '' || productForm.value.delivery != ''" class="d-flex justify-content-center">
                 <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
                     <div class="row mx-auto">
                         <div class="col-2 text-center">
@@ -109,16 +111,16 @@
                         <div class="ps-0 col-10">
                             <p>Kategória: {{productForm.value.category}}</p>
                         </div>
-                        <div class="col-2 text-center">
+                        <div class="col-2 text-center" *ngIf="productForm.value.materials[0]">
                             <fa-icon [icon]="faBoxes"></fa-icon>
                         </div>
-                        <div class="ps-0 col-10">
+                        <div class="ps-0 col-10" *ngIf="productForm.value.materials[0]">
                             <p>Anyaga: {{getMaterials()}}</p>
                         </div>
-                        <div class="col-2 text-center">
+                        <div class="col-2 text-center" *ngIf="productForm.value.delivery">
                             <fa-icon [icon]="faTruck"></fa-icon>
                         </div>
-                        <div class="ps-0 col-10">
+                        <div class="ps-0 col-10" *ngIf="productForm.value.delivery">
                             <p>{{productForm.value.delivery}}</p>
                         </div>
                     </div>
