--- a/agora-angular/src/app/my-profile/product-form/product-form.component.scss
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.scss
@@ -2,3 +2,20 @@
     min-width: 16rem;
     max-width: 18rem;
 }
+input.ng-invalid{
+    border-bottom: red thin solid;
+    // background-color: #ff8b95a6;
+}
+input.ng-untouched{
+    border-color: lightgray;
+}
+input.ng-valid{
+    border-bottom: #859C62 thin solid;
+}
+.form-control:focus {   
+    color: #212529;
+    background-color: #fff;
+    border-color: #859C62;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem #859c625b;
+}
